--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -1,3 +1,3 @@
 {% extends 'base.html' %} {% block content %}
-<h1>Hi, I'm Sean Yates: front and back end developer</h1>
+<h1>sean9yates@gmail.com</h1>
 {% endblock %}
